# fls

./: .gitignore  Cargo.toml  Makefile
src/: cli.rs  main.rs
