[package]
name = "fls"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
veneer = {git = "https://github.com/joshuarli/veneer", branch = "chore/update-to-syscall-package-that-builds"}
libc = "0.2"
itoa = {version = "0.4", default-features = false}
unicode-segmentation = "1.3"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"  # smallest build possible
